Fixing social icon spacing

--- a/web/wp-content/themes/lf-theme/source/scss/components/_social-share.scss
+++ b/web/wp-content/themes/lf-theme/source/scss/components/_social-share.scss
@@ -18,7 +18,6 @@
         grid-auto-flow: column;
         grid-row-gap: 0.5rem;
         grid-column-gap: 0.5rem;
-        grid-template-columns: 1fr;
         grid-template-rows: 1fr;
 
         li {
